--- a/DataFraim's/ex2.ipynb
+++ b/DataFraim's/ex2.ipynb
@@ -1,6 +1,508 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "15c9b75e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9b12ddb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>city</th>\n",
+       "      <th>population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Кабул</td>\n",
+       "      <td>1780000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Кандагар</td>\n",
+       "      <td>237500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id      city  population\n",
+       "0   1     Кабул     1780000\n",
+       "1   2  Кандагар      237500"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(r'test.txt'\n",
+    "                , names=['id', 'city', 'population']\n",
+    "                , encoding='utf-8')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6e6dcf45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>city</th>\n",
+       "      <th>code</th>\n",
+       "      <th>district</th>\n",
+       "      <th>population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Kabul</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Kabol</td>\n",
+       "      <td>1780000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Qandahar</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Qandahar</td>\n",
+       "      <td>237500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Herat</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Herat</td>\n",
+       "      <td>186800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Mazar-e-Sharif</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Balkh</td>\n",
+       "      <td>127800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>NLD</td>\n",
+       "      <td>Noord-Holland</td>\n",
+       "      <td>731200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4074</th>\n",
+       "      <td>4075</td>\n",
+       "      <td>Khan Yunis</td>\n",
+       "      <td>PSE</td>\n",
+       "      <td>Khan Yunis</td>\n",
+       "      <td>123175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4075</th>\n",
+       "      <td>4076</td>\n",
+       "      <td>Hebron</td>\n",
+       "      <td>PSE</td>\n",
+       "      <td>Hebron</td>\n",
+       "      <td>119401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4076</th>\n",
+       "      <td>4077</td>\n",
+       "      <td>Jabaliya</td>\n",
+       "      <td>PSE</td>\n",
+       "      <td>North Gaza</td>\n",
+       "      <td>113901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4077</th>\n",
+       "      <td>4078</td>\n",
+       "      <td>Nablus</td>\n",
+       "      <td>PSE</td>\n",
+       "      <td>Nablus</td>\n",
+       "      <td>100231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4078</th>\n",
+       "      <td>4079</td>\n",
+       "      <td>Rafah</td>\n",
+       "      <td>PSE</td>\n",
+       "      <td>Rafah</td>\n",
+       "      <td>92020</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4079 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id            city code       district  population\n",
+       "0        1           Kabul  AFG          Kabol     1780000\n",
+       "1        2        Qandahar  AFG       Qandahar      237500\n",
+       "2        3           Herat  AFG          Herat      186800\n",
+       "3        4  Mazar-e-Sharif  AFG          Balkh      127800\n",
+       "4        5       Amsterdam  NLD  Noord-Holland      731200\n",
+       "...    ...             ...  ...            ...         ...\n",
+       "4074  4075      Khan Yunis  PSE     Khan Yunis      123175\n",
+       "4075  4076          Hebron  PSE         Hebron      119401\n",
+       "4076  4077        Jabaliya  PSE     North Gaza      113901\n",
+       "4077  4078          Nablus  PSE         Nablus      100231\n",
+       "4078  4079           Rafah  PSE          Rafah       92020\n",
+       "\n",
+       "[4079 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities = pd.read_csv(r'city.csv',       # путь\\имя файла\n",
+    "                     encoding='utf-8',  # кодировка файла\n",
+    "                     sep=';',           # разделитель в файле, по умолчанию запятая\n",
+    "                     names=['id', 'city', 'code', \n",
+    "                            'district', 'population'], # заголовки\n",
+    "                     header = 0         # по умолчанию первая срока - заголовок (1)\n",
+    ")\n",
+    "cities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "41d2bb97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wiki_df = pd.read_html('https://en.wikipedia.org/wiki/Lincoln_Alexander')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7f64f7b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>School</th>\n",
+       "      <th>Position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>1991 – 2007</td>\n",
+       "      <td>University of Guelph</td>\n",
+       "      <td>Chancellor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>1989 – 19 October 2012</td>\n",
+       "      <td>Renison University College at the University o...</td>\n",
+       "      <td>Honorary Senior Fellow [26]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Location                    Date  \\\n",
+       "0  Ontario             1991 – 2007   \n",
+       "1  Ontario  1989 – 19 October 2012   \n",
+       "\n",
+       "                                              School  \\\n",
+       "0                               University of Guelph   \n",
+       "1  Renison University College at the University o...   \n",
+       "\n",
+       "                      Position  \n",
+       "0                   Chancellor  \n",
+       "1  Honorary Senior Fellow [26]  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wiki_df[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "905db908",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_df = pd.read_json('https://jsonplaceholder.typicode.com/todos')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2f34cfa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>completed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>delectus aut autem</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>quis ut nam facilis et officia qui</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>fugiat veniam minus</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>et porro tempora</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>laboriosam mollitia et enim quasi adipisci qui...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>10</td>\n",
+       "      <td>196</td>\n",
+       "      <td>consequuntur aut ut fugit similique</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>10</td>\n",
+       "      <td>197</td>\n",
+       "      <td>dignissimos quo nobis earum saepe</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>10</td>\n",
+       "      <td>198</td>\n",
+       "      <td>quis eius est sint explicabo</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>10</td>\n",
+       "      <td>199</td>\n",
+       "      <td>numquam repellendus a magnam</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>10</td>\n",
+       "      <td>200</td>\n",
+       "      <td>ipsam aperiam voluptates qui</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     userId   id                                              title  completed\n",
+       "0         1    1                                 delectus aut autem      False\n",
+       "1         1    2                 quis ut nam facilis et officia qui      False\n",
+       "2         1    3                                fugiat veniam minus      False\n",
+       "3         1    4                                   et porro tempora       True\n",
+       "4         1    5  laboriosam mollitia et enim quasi adipisci qui...      False\n",
+       "..      ...  ...                                                ...        ...\n",
+       "195      10  196                consequuntur aut ut fugit similique       True\n",
+       "196      10  197                  dignissimos quo nobis earum saepe       True\n",
+       "197      10  198                       quis eius est sint explicabo       True\n",
+       "198      10  199                       numquam repellendus a magnam       True\n",
+       "199      10  200                       ipsam aperiam voluptates qui      False\n",
+       "\n",
+       "[200 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f696fff0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
